# ARMProject

./: .gitignore  CMakeLists.txt  README.md
doc/: Checkpoint.tex  instructionNum.txt
programs/: gpio.s
src/: Makefile  assemble.c  bit_operations_utilities.c  bit_operations_utilities.h  emulate.c  fetch_decode_execute.c  fetch_decode_execute.h  kern.sh  kernel.img  symbol_table.c
src/ChessServer/: chess_engine.c  chess_engine.h  network_protocols.h
src/Emulator/: bit_operations_utilities.c  bit_operations_utilities.h  build.sh  emulate.c  fetch_decode_execute.c  fetch_decode_execute.h  processor_data_handling.c  processor_data_handling.h  result_flags.h
src/Extension/: Makefile  client.c  network_protocols.c  network_protocols.h  server.c
src/Extension/Chess_Engine/: chess_engine.c  chess_engine.h
src/Extension/Client/: SDL_Libraries.h  client.c  rendering_global_vars.c  rendering_global_vars.h  sdl_utilities.c  sdl_utilities.h  texture.c  texture.h
src/Extension/Client/Images/: readme.txt
src/Utilities/: bit_operations_utilities.c  bit_operations_utilities.h
src/assembler/: assemble.c  binary_conversion.c  binary_conversion.h  convert_instructions.c  convert_instructions.h  file_handling.c  file_handling.h  file_processing.c  first_pass.c  first_pass.h  symbol_table.c  symbol_table_tokens.c  symbol_table_tokens.h
